--- a/i18n/en.json
+++ b/i18n/en.json
@@ -14,9 +14,11 @@
 	"timemachine-p3": "To return to browsing the wiki normally, click the button below, or empty your cookies.",
 	"timemachine-button2": "Back to the present",
 	"timemachine-article-info": "You are currently using the [[Special:TimeMachine|Time Machine]]. Your view of this article might not reflect the most recent state.",
-	"timemachine-search-info": "You are currently using the [[Special:TimeMachine|Time Machine]]. Search is not affected by your time traveling, which includes search result previews.",
+	"timemachine-search-info": "You are currently using the [[Special:TimeMachine|Time Machine]]. Search results are based on the current state of pages, but articles that have not yet existed at the time you're traveling to are hidden. To avoid seeing newer page content, page previews are disabled.",
+	"timemachine-category-info": "You are currently using the [[Special:TimeMachine|Time Machine]]. This list will display all articles in a category using their most recent title, even if they did not exist yet or had a different title at the time you're traveling to.",
 	"timemachine-missing": "You are using the [[Special:TimeMachine|Time Machine]]. There either is currently no text on this page or it does not exist yet at the time you've traveled to.",
 	"timemachine-success-traveling": "Successfully traveled to another time. You will now only be able to visit pages as they existed before your chosen date.",
 	"timemachine-success-reset": "Successfully returned to the present. You will now see the regular content for all pages again.",
-	"timemachine-info-traveling": "You are currently actively using the Time Machine and have traveled to another date that you can see below."
+	"timemachine-info-traveling": "You are currently actively using the Time Machine and have traveled to another date that you can see below.",
+	"timemachine-no-editing": "You are using the [[Special:TimeMachine|Time Machine]]. To edit this page, go back to the present."
 }
